<resources>
    <string name="hello">Hello World, HiDTVPlayerActivity!</string>
    <string name="app_name">HiTVPlayer</string>
    <string name="channel_list">CHANNEL LIST</string>
    <string name="channel_name">Channel Name:</string>
    <string name="channel_num">Channel Number:</string>
    <string name="string_null"></string>
    <string name="play_no_channel_title">No channel data</string>
    <string name="play_no_channel_tip">No channel now. Please scan first!</string>
    <string name="play_no_signal_title">No Signal or Weak Signal</string>
    <string name="play_signal_unsupport">Signal unsupported</string>
    <string name="play_av_stop_title">Frontend data stopped</string>
    <string name="play_ca_title">Scrambled</string>
    <string name="play_channel_invalid">INVALID</string>
    <string name="play_password_menu_lock">Please enter MenuLock password</string>
    <string name="play_password_program_lock">Please enter ProgramLock password</string>
    <string name="play_password_parental_rating">Please enter ParentLock password</string>
    <string name="play_password_source_lock">Please enter SourceLock password</string>
    <string name="play_password_lock_setting">Please enter LockSetting password</string>
    <string name="password_wrong_tip">Password is incorrect</string>
    <string name="select_audio_track">Select Audio Track</string>
    <string name="select_audio_bg_des">Select Audio Track CheckBox</string>
    <string name="play_wait_dialog_message">Waiting</string>
    <string name="play_unlock_fail">Unlock failed</string>
    <string name="play_no_radio_and_data">No radio and data</string>
    <string name="play_no_tv_and_radio">No tv and radio</string>
    <string name="play_no_data_and_tv">No data and tv</string>
    <string name="play_pip_scramble">PIP program is scrambled</string>
    <string name="play_channel_search">Scanning channels…</string>
    <string name="home_list_view_des">View image background</string>
    <string name="str_no_data">no data</string>
    <string name="str_set_fail">Failed to set</string>
    <string name="str_save_fail">Failed to save</string>
    <string name="str_save_query">Do you want to save?</string>
    <string name="str_dvbc_validate_input">Please enter valid arguments(freq between 113–866, symbol rate between 900-7200)</string>
    <string name="str_dvbc_nid_input">Please enter valid arguments(network id between 0–65535)</string>
    <string name="str_atsc_validate_input">Please enter a valid argument, atsc_t freq between 2–69, atsc_cab freq between 1–135</string>
    <string name="str_add">Add</string>
    <string name="str_delete">Delete</string>
    <string name="str_edit">Edit</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_save">Save</string>
    <string name="str_name">Name</string>
    <string name="str_tv">DTV Channel</string>
    <string name="str_radio">Radio Channel</string>
    <string name="str_strength">Signal Strength</string>
    <string name="str_qaulity">Signal Quality</string>
    <string name="str_satellite">Satellite</string>
    <string name="str_transponder">Transponder</string>
    <string name="str_rate_unit">Kbps</string>
    <string name="str_freq_unit">MHz</string>
    <string name="str_on">On</string>
    <string name="str_off">Off</string>
    <string name="str_country">Country</string>
    <string name="str_source">Source</string>
    <string name="str_version">Version</string>
    <string name="str_motor12_goto">Go to</string>
    <string name="str_install_atsc_cab_format">Cable Format</string>
    <string name="str_install_service_cab_format">Service Type</string>
    <string name="str_please_wait">Please wait.</string>
    <string name="str_none">None</string>
    <string name="str_install_type">Install Type</string>
    <string name="str_save_success">Save successfully</string>
    <string name="str_install_range_out">Please enter a valid parameter of [%1$s],enter a value of %2$d to %3$d</string>
    <string name="str_no_input_tip">Please enter a valid parameter, the parameter can not be empty</string>
    <string name="str_can_not_save">0 position is 0 degree, can not be saved using new one</string>
    <string name="str_dtelete_fail">Fail to delete</string>
    <string name="str_dvbs_validate_input">Please enter a valid data, C:3000-4800 ku:10600-12750, Symbolrate:1-60000</string>
    <string name="str_percent" translatable="false">%d%%</string>
    <string name="str_install_search">Scan</string>
    <string name="str_install_lnbtype">LNB type</string>
    <string name="str_install_lnbpower">LNB power</string>
    <string name="str_install_22k">22k switch</string>
    <string name="str_install_diseqc_mode">DiSEqC type</string>
    <string name="str_install_diseqc_10port">DiSEqC1.0 Port</string>
    <string name="str_install_diseqc_11port">DiSEqC1.1 Port</string>
    <string name="str_install_diseqc_20port">DiSEqC2.0 Port</string>
    <string name="str_install_motor_type">Motor Type</string>
    <string name="str_install_motor_reset">Reset</string>
    <string name="str_install_local_long">Local Longitude</string>
    <string name="str_install_locat_lati">Local Latitude</string>
    <string name="str_install_longitude">Longitude</string>
    <string name="str_install_longtype">Direction</string>
    <string name="str_install_scan_title">Installation</string>
    <string name="str_install_scan_catype">CA Type</string>
    <string name="str_install_scan_channel">Channel Type</string>
    <string name="str_install_scan_network">Network Search</string>
    <string name="str_install_scan_mode">Scan Type</string>
    <string name="str_install_scan_start">Start Scan</string>
    <string name="str_install_scan_stop_query">Are you sure to stop scanning?</string>
    <string name="str_install_tpedit_title">Transponder Edit</string>
    <string name="str_install_ctpedit_mainfreq">Main Freq</string>
    <string name="str_install_ctpedit_networkid">Network Id</string>
    <string name="str_install_ctpedit_freq">Start Freq</string>
    <string name="str_install_tpedit_freq">Frequency</string>
    <string name="str_install_tpedit_rate">Symbol rate</string>
    <string name="str_install_tpedit_pol">Polarity</string>
    <string name="str_install_move_step">Move Step</string>
    <string name="str_install_to_west">To West</string>
    <string name="str_install_to_east">To East</string>
    <string name="str_install_goto">Go to X</string>
    <string name="str_install_reference">Go to reference</string>
    <string name="str_install_pos_no">Position No.(Save)</string>
    <string name="str_install_limit_type">Limit Type</string>
    <string name="str_install_progress_title">Scanning</string>
    <string name="str_install_progress_start_fail">Failed to start scanning of [%s]</string>
    <string name="str_install_tuner_lock_fail">Fail</string>
    <string name="str_install_tuner_sucess">Success</string>
    <string name="str_install_nit_scan">NIT Scan</string>
    <string name="str_install_quick_scan">Quick Scan</string>
    <string name="str_install_full_scan">Full Scan</string>
    <string name="str_install_blind_scan">Blind Scan</string>
    <string name="str_install_manual_scan">Manual Scan</string>
    <string name="str_install_bandwidth">Bandwidth</string>
    <string name="str_install_qam">QAM</string>
    <string name="str_install_dvbt_id">%1$4d : %2$d KHz</string>
    <string name="str_install_tuner_signal">Tuner signal</string>
    <string name="str_install_tuner_device">Tuner device</string>
    <string name="str_install_reset">Install reset</string>
    <string name="str_install_oneseg">OneSeg</string>
    <string name="str_number_zero">0</string>
    <string name="str_install_tp_info">Frequency</string>
    <string name="str_atsc_ch_info">CH</string>
    <string name="str_scan_type_select">Select Scan Type</string>
    <string name="str_scan_type_name">Scan Type</string>
    <string name="str_signal_type_select">Select Signal Type</string>
    <string name="str_atv_channel">Analog Channel</string>
    <string name="str_install_network_noselect">Please select a satellite firstly</string>
    <string name="str_install_network_delete_query">Are you sure to delete the satellite selected ?</string>
    <string name="str_install_network_name_exist">The satellite name already exists, please input again</string>
    <string name="str_install_tp_noselect">Please select a transponder first</string>
    <string name="str_install_tpdelete_query">Are you sure to delete the transponder %dHz?</string>
    <string name="str_install_west">West</string>
    <string name="str_install_east">East</string>
    <string name="str_install_stop_move">Stop</string>
    <string name="str_install_disable">Disable</string>
    <string name="str_install_long_west">West Longitude</string>
    <string name="str_install_long_east">East Longitude</string>
    <string name="str_install_lati_south">South Latitude</string>
    <string name="str_install_lati_north">North Latitude</string>
    <string name="str_install_locking">Tuner is locking</string>
    <string name="str_install_all">ALL</string>
    <string name="str_install_fta">Free</string>
    <string name="str_install_scramble">Scrambled</string>
    <string name="str_install_tv">TV</string>
    <string name="str_install_radio">Radio</string>
    <string name="str_install_blind">Blind</string>
    <string name="str_install_auto_full">Auto Full</string>
    <string name="str_install_enhanced">Enhance</string>
    <string name="str_install_diseqc10">DiSEqC  1.0</string>
    <string name="str_install_diseqc11">DiSEqC  1.1</string>
    <string name="str_install_diseqc1110">DiSEqC  1.1/1.0</string>
    <string name="str_install_diseqc12">DiSEqC  1.2</string>
    <string name="str_install_diseqc20">DiSEqC  2.0</string>
    <string name="str_install_usals">USALS</string>
    <string name="str_install_port_a">A</string>
    <string name="str_install_port_b">B</string>
    <string name="str_install_port_c">C</string>
    <string name="str_install_port_d">D</string>
    <string name="str_install_network_reach_max">The number of satellites has reached the maximum(64).</string>
    <string name="str_install_fail_addsatellite">Failed to add the satellite.</string>
    <string name="str_install_fail_addtp">Failed to add the transponder.</string>
    <string name="str_install_add_satellite">Add Satellite</string>
    <string name="str_install_edit_satellite">Edit Satellite</string>
    <string name="setting_yes">OK</string>
    <string name="setting_no">Cancel</string>
    <string name="pvr_set_record_time">Set Recording Time</string>
    <string name="pvr_set_record_time_hour">H</string>
    <string name="pvr_set_record_time_min">M</string>
    <string name="pvr_set_record_default_hour">1</string>
    <string name="pvr_set_record_default_min">0</string>
    <string name="cas">CAS</string>
    <string name="channel_edit_title">Channel Edit</string>
    <string name="channel_group_list">Group List</string>
    <string name="channel_channel_list">Channel List</string>
    <string name="name">Name</string>
    <string name="add_channel">Add Channel</string>
    <string name="edit">Edit</string>
    <string name="no">NO.</string>
    <string name="favorite">Favorite</string>
    <string name="skip">Skip</string>
    <string name="lock">Lock</string>
    <string name="add_to_fav">Add To Fav</string>
    <string name="delete">Delete</string>
    <string name="rename">Rename</string>
    <string name="sort">Sort</string>
    <string name="move">Move</string>
    <string name="muti_operate">Multi-Operate</string>
    <string name="cas_all">All</string>
    <string name="cas_fta">FTA</string>
    <string name="cas_scramble">Scramble</string>
    <string name="delete_all">Delete All</string>
    <string name="channel_edit_list">Channel Edit</string>
</resources>