<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/setting_menu_bg"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_channel_manager_add_to_fav"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/btn_bg"
        android:text="@string/add_to_fav"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_channel_manager_skip"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg"
        android:text="@string/skip"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_channel_manager_lock"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg"
        android:text="@string/lock"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_channel_manager_delete"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg"
        android:text="@string/delete"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/button_channel_manager_delete_all"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_bg"
        android:text="@string/delete_all"
        android:textColor="@color/white"
        android:textAllCaps="false" />

</LinearLayout>
