<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/channel_manager_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginBottom="32dp"
     android:layout_marginLeft="40dp"
     android:layout_marginTop="32dp"
     android:layout_marginRight="40dp"
     android:background="@drawable/custom_view_bg"
     android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView_channelManager_title"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="56dp"
            android:gravity="center_vertical"
            android:text="@string/channel_edit_list"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/textView_channelManager_position"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:gravity="center_vertical"
            android:text="@string/string_null"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:baselineAligned="true" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.55"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/channel_group_list"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <ListView
                android:id="@+id/listView_channel_manager_group_list"
                android:layout_width="fill_parent"
                android:layout_height="410dp"
                android:choiceMode="none"
                android:divider="@drawable/channellist_line"
                android:listSelector="@drawable/chlist_list_item_bg" >

            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="60dp"
                android:gravity="center_vertical"
                android:text="@string/channel_channel_list"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:visibility="gone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical" >

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="@string/no"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/name"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:gravity="center_horizontal"
                    android:text="@string/favorite"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/skip"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:gravity="center_horizontal"
                    android:text="@string/lock"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

            <ListView
                android:id="@+id/listView_channel_manager_channel_list"
                android:layout_width="fill_parent"
                android:layout_height="410dp"
                android:choiceMode="none"
                android:divider="@drawable/channellist_line"
                android:listSelector="@drawable/chlist_list_item_bg" >

            </ListView>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <ImageView
            android:id="@+id/imageView_channel_manager_f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/edit"
            android:src="@drawable/common_red" />

        <TextView
            android:id="@+id/textView_channel_manager_f2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/move"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView_channel_manager_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/add_channel"
            android:src="@drawable/common_green" />

        <TextView
            android:id="@+id/textView_channel_manager_f1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/muti_operate"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView_channel_manager_f3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/rename"
            android:src="@drawable/common_yellow" />

        <TextView
            android:id="@+id/textView_channel_manager_f3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/sort"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/imageView_channel_manager_f4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/channel_edit_title"
            android:src="@drawable/common_blue" />

        <TextView
            android:id="@+id/textView_channel_manager_f4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/channel_edit_title"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"/>

    </LinearLayout>

</LinearLayout>
