<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="541dp"
    android:layout_height="149dp"
    android:background="@drawable/custom_setting_view_bg"
    android:focusable="false"
    android:focusableInTouchMode="false"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:gravity="center_vertical"
        android:text="@string/cas"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_channellist_cas_all"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/cas_all"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_channellist_cas_fat"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/cas_fta"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button_channellist_cas_scramble"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/cas_scramble"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
