<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="464dp"
    android:layout_height="250dp"
    android:layout_gravity="center"
    android:background="@drawable/custom_view_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/confirm_tip"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
        android:textColor="@color/white"
        android:text="@string/pvr_set_record_time"
        android:gravity="center"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/record_time_hour"
            android:layout_width="73dp"
            android:layout_height="fill_parent"
            android:background="@drawable/channeledit_dialog_editview_bg"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="time"
            android:maxLength="2"
            android:singleLine="true"
            android:text="@string/pvr_set_record_default_hour"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/record_time_hour_colon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pvr_set_record_time_hour"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/record_time_min"
            android:layout_width="73dp"
            android:layout_height="fill_parent"
            android:background="@drawable/channeledit_dialog_editview_bg"
            android:ellipsize="end"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:inputType="time"
            android:maxLength="2"
            android:singleLine="true"
            android:text="@string/pvr_set_record_default_min"
            android:layout_marginLeft="55dp"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/record_time_min_colon"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/pvr_set_record_time_min"
            android:gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/record_time_no"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:background="@drawable/install_btn_bg"
            android:text="@string/setting_no"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:textSize="20sp" >
        </Button>

        <Button
            android:id="@+id/record_time_yes"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/install_btn_bg"
            android:text="@string/setting_yes"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            android:textSize="20sp" >
        </Button>
    </LinearLayout>
</LinearLayout>

